-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (/oracle/valhallaL/open/src/hotspot/share/interpreter/linkResolver.cpp:1374), pid=5303, tid=5304
# assert(resolved_method->method_holder()->is_linked()) failed: must be linked
Stack: [0x00007ff70f441000,0x00007ff70f542000], sp=0x00007ff70f53f750, free space=1017k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a418dc] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x1a4286f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xbdecaa] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0x1368bbc] LinkResolver::runtime_resolve_virtual_method(CallInfo&, methodHandle const&, Klass*, Handle, Klass*, bool, Thread*)+0x30c
V [libjvm.so+0x1369485] LinkResolver::resolve_invokevirtual(CallInfo&, Handle, constantPoolHandle const&, int, Thread*)+0x165
V [libjvm.so+0x1369576] LinkResolver::resolve_invoke(CallInfo&, Handle, constantPoolHandle const&, int, Bytecodes::Code, Thread*)+0xc6
V [libjvm.so+0xfb85cf] InterpreterRuntime::resolve_invoke(JavaThread*, Bytecodes::Code)+0x25f
V [libjvm.so+0xfba74b] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0x11b
j compiler.valhalla.valuetypes.TestLWorld.test65_verifier(Z)V+34
v ~StubRoutines::call_stub
V [libjvm.so+0xfdff28] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x8c8
V [libjvm.so+0x1788ad5] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xe75
V [libjvm.so+0x178d972] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x222
V [libjvm.so+0x116c62b] JVM_InvokeMethod+0x22b
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+237
J 1093 c2 compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V (18 bytes) @ 0x00007ff704310f20 [0x00007ff704310ee0+0x0000000000000040]
j compiler.valhalla.valuetypes.TestLWorld.main([Ljava/lang/String;)V+45
v ~StubRoutines::call_stub
V [libjvm.so+0xfdff28] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x8c8
V [libjvm.so+0x10c25e0] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.104]+0x280
V [libjvm.so+0x1103665] jni_CallStaticVoidMethod+0x215
C [libjli.so+0x4b57] JavaMain+0xa57
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j compiler.valhalla.valuetypes.TestLWorld.test65_verifier(Z)V+34
v ~StubRoutines::call_stub
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+237
J 1093 c2 compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V (18 bytes) @ 0x00007ff704310f20 [0x00007ff704310ee0+0x0000000000000040]
j compiler.valhalla.valuetypes.TestLWorld.main([Ljava/lang/String;)V+45
v ~StubRoutines::call_stub
# assert(resolved_method->method_holder()->is_linked()) failed: must be linked
Stack: [0x00007ff70f441000,0x00007ff70f542000], sp=0x00007ff70f53f750, free space=1017k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a418dc] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x1a4286f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xbdecaa] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0x1368bbc] LinkResolver::runtime_resolve_virtual_method(CallInfo&, methodHandle const&, Klass*, Handle, Klass*, bool, Thread*)+0x30c
V [libjvm.so+0x1369485] LinkResolver::resolve_invokevirtual(CallInfo&, Handle, constantPoolHandle const&, int, Thread*)+0x165
V [libjvm.so+0x1369576] LinkResolver::resolve_invoke(CallInfo&, Handle, constantPoolHandle const&, int, Bytecodes::Code, Thread*)+0xc6
V [libjvm.so+0xfb85cf] InterpreterRuntime::resolve_invoke(JavaThread*, Bytecodes::Code)+0x25f
V [libjvm.so+0xfba74b] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0x11b
j compiler.valhalla.valuetypes.TestLWorld.test65_verifier(Z)V+34
v ~StubRoutines::call_stub
V [libjvm.so+0xfdff28] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x8c8
V [libjvm.so+0x1788ad5] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xe75
V [libjvm.so+0x178d972] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x222
V [libjvm.so+0x116c62b] JVM_InvokeMethod+0x22b
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+237
J 1093 c2 compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V (18 bytes) @ 0x00007ff704310f20 [0x00007ff704310ee0+0x0000000000000040]
j compiler.valhalla.valuetypes.TestLWorld.main([Ljava/lang/String;)V+45
v ~StubRoutines::call_stub
V [libjvm.so+0xfdff28] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x8c8
V [libjvm.so+0x10c25e0] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.104]+0x280
V [libjvm.so+0x1103665] jni_CallStaticVoidMethod+0x215
C [libjli.so+0x4b57] JavaMain+0xa57
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j compiler.valhalla.valuetypes.TestLWorld.test65_verifier(Z)V+34
v ~StubRoutines::call_stub
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+237
J 1093 c2 compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V (18 bytes) @ 0x00007ff704310f20 [0x00007ff704310ee0+0x0000000000000040]
j compiler.valhalla.valuetypes.TestLWorld.main([Ljava/lang/String;)V+45
v ~StubRoutines::call_stub