8207844: [lworld] Crash during method resolution because value type holder is not linked

Reviewed-by: roland